# bioimage_analysis_framework_demo

./: .flake8  README.md  example_analysis_via_python.py  export_example_images_from_scikit.py  generate_ts_from_openapi.sh  openapi.json  package-lock.json  pyproject.toml  run_bioimage_processing_service.py  run_bioimage_processing_service.sh  run_example_analysis_via_python.sh  run_rabbitmq_broker.sh  run_redis_result_backend.sh  run_rest_api.sh  run_web_frontend.sh
frontend/: README.md  package-lock.json  package.json  quasar.config.js
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: IndexPage.vue
service/: bioimage_processing_service.py  bioimage_processing_service_run.py  models.py  proxy.py  rest_api.py  router.py  task_detect_ridges.py  task_isolate_rgb.py  task_recognize_faces.py  tasks_storage.py
